--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,6 +33,11 @@
 
 		<!-- Custom css --> 
 		<link href="css/custom.css" rel="stylesheet">
+		<style type="text/css">
+			.col-md-12 img {
+				margin: auto;
+			}
+		</style>
 	</head>
 
 	<body class="no-trans">
@@ -99,7 +104,7 @@
 
 												<li><a href="service.html">服务</a></li>
 												<!-- <li><a href="#portfolio">Portfolio</a></li> -->
-												<li><a href="../SpiderNet/service/manage/loginPage.html">SpiderNet</a></li>
+												<li><a href="#SpiderNet">SpiderNet</a></li>
 												<li><a href="knowledge.html">知识库</a></li>
 												<li><a href="#about" >关于能力中心</a></li>
 											 </ul>
@@ -142,39 +147,53 @@
 		<!-- ================ -->
 		<div class="section clearfix object-non-visible" data-animation-effect="fadeIn">
 			<div class="container">
-				<div class="row" style="">
+				<div class="row" >
 					<div class="col-md-12">
 						<h1 id="about" class="title text-center">能力中心 <span>Capability Center</span></h1>
+						<h2>演进路线</h2>
+						<div class="space"></div>
+						<div class="row">
+							<div class="col-md-12">
+								<img src="images/005.png" alt="">
+								<div class="space"></div>
+							</div>
 						<h2>战略解码</h2>
 						
 						<div class="space"></div>
 						<div class="row">
-							<div class="col-md-8">
-								<img src="images/战略1.png" alt="">
+							<div class="col-md-12">
+								<img src="images/004.png" alt="">
 								<div class="space"></div>
-							</div>
 
-							<div class="col-md-4">
-								<ul class="list-unstyled">
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 技术能力</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 业务能力</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 架构能力</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 创新能力</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 管理能力</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 售前能力</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 敏捷能力</li>
-									<li><i class="fa fa-caret-right pr-10 text-colored"></i> 国际化能力</li>
-								</ul>
 							</div>
+							<div class="space"></div>
+							<div class="row">
+								<div class="col-md-12">
+									<img src="images/002.png" alt="" usemap="#book">
+									<map name="book">
+										<area shape="rect" coords="70,30,150,70" alt="架构能力" href="http://localhost:63342/cc/service4.html">
+										<area shape="rect" coords="50,90,100,150" alt="管理能力" href="http://localhost:63342/cc/service6.html">
+										<area shape="rect" coords="0,180,80,220" alt="国际化能力" href="http://localhost:63342/cc/service8.html">
+										<area shape="rect" coords="50,250,120,310" alt="售前能力" href="http://localhost:63342/cc/service7.html">
+										<area shape="rect" coords="550,70,630,120" alt="技术能力" href="http://localhost:63342/cc/service1.html">
+										<area shape="rect" coords="580,150,650,200" alt="业务能力" href="http://localhost:63342/cc/service2.html">
+										<area shape="rect" coords="570,230,650,250" alt="创新能力" href="http://localhost:63342/cc/service5.html">
+										<area shape="rect" coords="520,320,600,360" alt="敏捷能力" href="http://localhost:63342/cc/service3.html">
+									</map>
+
+									<div class="space"></div>
+								</div>
+
 						</div>
+							<h2>RoadMap</h2>
 						<div class="space"></div>
 						<div class="row">
-							<div class="col-md-8">
-								<img src="images/003.png" alt="">
+							<div class="col-md-12">
+								<img src="images/0.png" alt="">
 								<div class="space"></div>
 							</div>
-							<div class="col-md-4">
-														<h2>演进路线解读</h2>
+							<div class="col-md-12">
+
 														<p>第一，刚开始我们不知道有什么，所以我们先要解决我们有什么的问题，先完成基础业务能力和技术能力的沉淀形成知识库；</p>
 														<p>第二，有了基本业务和基本技术的知识库我们才能提供基本培训和训战体系；</p>
 														<p>第三，知识库和训战体系都是为任职服务，所以完成基本任职体系；</p>
