--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>能力中</title>
+		<title>能力中心</title>
 		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -104,9 +104,6 @@
 
 												<li><a href="service.html">服务</a></li>
 												<!-- <li><a href="#portfolio">Portfolio</a></li> -->
-
-												<li><a href="#SpiderNet">SpiderNet</a></li>
-
 												
 <li><a href="../SpiderNetDev/service/manage/loginPage.html">SpiderNet</a></li>
 
@@ -155,22 +152,27 @@
 				<div class="row" >
 					<div class="col-md-12">
 						<h1 id="about" class="title text-center">能力中心 <span>Capability Center</span></h1>
-						<h2>演进路线</h2>
-						<div class="space"></div>
-						<div class="row">
+
+					</div>
+				</div>
+				<div class="row">
+					<h2>演进路线</h2>
+					<div class="space"></div>
+
 							<div class="col-md-12">
 								<img src="images/005.png" alt="">
 								<div class="space"></div>
 							</div>
+				</div>
+				<div class="row">
 						<h2>战略解码</h2>
-						
 						<div class="space"></div>
-						<div class="row">
+
 							<div class="col-md-12">
 								<img src="images/004.png" alt="">
 								<div class="space"></div>
-
 							</div>
+				</div>
 							<div class="space"></div>
 							<div class="row">
 								<div class="col-md-12">
@@ -190,13 +192,15 @@
 								</div>
 
 						</div>
+				<div class="row">
 							<h2>RoadMap</h2>
 						<div class="space"></div>
-						<div class="row">
+
 							<div class="col-md-12">
 								<img src="images/0.png" alt="">
 								<div class="space"></div>
 							</div>
+				</div>
 							<div class="col-md-12">
 
 														<p>第一，刚开始我们不知道有什么，所以我们先要解决我们有什么的问题，先完成基础业务能力和技术能力的沉淀形成知识库；</p>
@@ -213,6 +217,8 @@
 				</div>
 			</div>
 		</div>
+            </div>
+        </div>
               <!--  <Hello world>-->
 		<!-- section end -->
 
@@ -330,9 +336,9 @@
 		<!-- section start -->
 		<!-- ================ -->
 		<div class="section translucent-bg bg-image-2 pb-clear">
-			<div class="container object-non-visible" data-animation-effect="fadeIn">
+            <div class="container object-non-visible" data-animation-effect="fadeIn">
 				<h1 id="clients" class="title text-center">我们</h1>
-				<div class="space"></div>
+                <div class="space"></div>
 				<div class="row">
 					<div class="col-md-4">
 						<div class="media testimonial">
@@ -486,7 +492,8 @@
 
 			<!-- .footer start -->
 			<!-- ================ -->
-			<div class="footer section">
+			<div style="padding: 0%" class="footer section">
+
 				<div class="container">
 
 
