--- a/src/main/webapp/service8.html
+++ b/src/main/webapp/service8.html
@@ -632,18 +632,42 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title" id="project-1-label">服务目录</h4>
+                <h4 class="modal-title" id="project-1-label">English Training Service Category</h4>
             </div>
             <div class="modal-body">
-                <h3>Project Description</h3>
+                <h3>Solution</h3>
+                <hr/>
                 <div class="row">
-                    <div class="col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde. Quae sed, incidunt laudantium nesciunt, optio corporis quod earum pariatur omnis illo saepe numquam suscipit, nemo placeat dignissimos eius mollitia et quas officia doloremque ipsum labore rem deserunt vero! Magnam totam delectus accusantium voluptas et, tempora quos atque, fugiat, obcaecati voluptatibus commodi illo voluptates dolore nemo quo soluta quis.</p>
-                        <p>Molestiae sed enim laboriosam atque delectus voluptates rerum nostrum sapiente obcaecati molestias quasi optio exercitationem, voluptate quis consequatur libero incidunt, in, quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nobis officiis, autem earum tenetur quidem. Quae non dicta earum. Ipsum autem eaque cum dolor placeat corporis quisquam dolorum at nesciunt.</p>
+                    <div class="col-md-4">
+                        <div class="">
+                            <h2>Oral improvement</h2>
+                            <p>一句话介绍。</p>
+                            <p><a class="btn btn-primary" role="button">
+                                查看</a>
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-md-6">
-                        <img src="images/portfolio-1.jpg" alt="">
+                    <div class="col-md-4">
+                        <div class="">
+                            <h2>Written training</h2>
+                            <p>一句话介绍。</p>
+                            <p><a class="btn btn-primary" role="button">
+                                查看</a>
+                            </p>
+                        </div>
                     </div>
+                    <div class="col-md-4">
+                        <div class="">
+                            <h2>Potential trainer</h2>
+                            <p>一句话介绍。</p>
+                            <p><a class="btn btn-primary" role="button">
+                                查看</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <img src="images/englishSolution.png" class="img-thumbnail">
                 </div>
             </div>
             <div class="modal-footer">
