--- a/src/main/webapp/service8.html
+++ b/src/main/webapp/service8.html
@@ -195,78 +195,36 @@
                            <div class="fh5co-heading">
                                <span>We're expert</span>
                                <h2>What We Do</h2>
-                               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                               <p>In addition to the service category,we also provide you with the following support.</p>
                            </div>
                        </div>
                    </div>
                    <div class="row">
-                       <div class="col-md-4 col-sm-6 ">
+                       <div class="col-md-6 col-sm-6 ">
                            <div class="feature-center animate-box" data-animate-effect="fadeInUp">
 						<span class="icon">
 							<i class="icon-eye"></i>
 						</span>
-                               <h3>Retina Ready</h3>
-                               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                               <h1>Regular Acting</h1>
+                               <h3>English Corner <span style="color:blueviolet;font-style:italic;font-size:16px;">on Wednesday</span> </h3>
+                               <h3>Oriented <span style="color:blueviolet;font-style:italic;font-size:16px;">on Thursday</span> </h3>
+                               <h3>ToastMaster <span style="color:blueviolet;font-style:italic;font-size:16px;">on  Friday</span> </h3>
                                <p><a href="#">Learn more</a></p>
                            </div>
                        </div>
-                       <div class="col-md-4 col-sm-6 ">
+                       <div class="col-md-6 col-sm-6 ">
                            <div class="feature-center animate-box" data-animate-effect="fadeInUp">
 						<span class="icon">
 							<i class="icon-command"></i>
 						</span>
-                               <h3>Fully Responsive</h3>
-                               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                               <p><a href="#">Learn more</a></p>
-                           </div>
-                       </div>
-                       <div class="clearfix visible-sm-block"></div>
-                       <div class="col-md-4 col-sm-6 ">
-                           <div class="feature-center animate-box" data-animate-effect="fadeInUp">
-						<span class="icon">
-							<i class="icon-power"></i>
-						</span>
-                               <h3>Web Starter</h3>
-                               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                               <h1>Translation Support</h1>
+                               <h3>XXX</h3>
+                               <h3>XXX</h3>
+                               <h3>XXX</h3>
                                <p><a href="#">Learn more</a></p>
                            </div>
                        </div>
 
-                       <div class="clearfix visible-md-block"></div>
-
-                       <div class="col-md-4 col-sm-6 ">
-                           <div class="feature-center animate-box" data-animate-effect="fadeInUp">
-						<span class="icon">
-							<i class="icon-eye"></i>
-						</span>
-                               <h3>Retina Ready</h3>
-                               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                               <p><a href="#">Learn more</a></p>
-                           </div>
-                       </div>
-                       <div class="clearfix visible-sm-block"></div>
-                       <div class="col-md-4 col-sm-6 ">
-                           <div class="feature-center animate-box" data-animate-effect="fadeInUp">
-						<span class="icon">
-							<i class="icon-command"></i>
-						</span>
-                               <h3>Fully Responsive</h3>
-                               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                               <p><a href="#">Learn more</a></p>
-                           </div>
-                       </div>
-                       <div class="col-md-4 col-sm-6 ">
-                           <div class="feature-center animate-box" data-animate-effect="fadeInUp">
-						<span class="icon">
-							<i class="icon-power"></i>
-						</span>
-                               <h3>Web Starter</h3>
-                               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                               <p><a href="#">Learn more</a></p>
-                           </div>
-                       </div>
-
-                       <div class="clearfix visible-md-block"></div>
 
                    </div>
                </div>
@@ -637,38 +595,17 @@
             <div class="modal-body">
                 <h3>Solution</h3>
                 <hr/>
+
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="">
-                            <h2>Oral improvement</h2>
-                            <p>一句话介绍。</p>
-                            <p><a class="btn btn-primary" role="button">
-                                查看</a>
-                            </p>
-                        </div>
+                    <div class="col-md-8" col-md-offset-2>
+                        <img src="images/englishService01.png" alt="">
                     </div>
-                    <div class="col-md-4">
-                        <div class="">
-                            <h2>Written training</h2>
-                            <p>一句话介绍。</p>
-                            <p><a class="btn btn-primary" role="button">
-                                查看</a>
-                            </p>
-                        </div>
+                    <div class="col-md-8" col-md-offset-2>
+                        <img src="images/englishService02.png" alt="">
                     </div>
-                    <div class="col-md-4">
-                        <div class="">
-                            <h2>Potential trainer</h2>
-                            <p>一句话介绍。</p>
-                            <p><a class="btn btn-primary" role="button">
-                                查看</a>
-                            </p>
-                        </div>
-                    </div>
+
                 </div>
-                <div class="row">
-                    <img src="images/englishSolution.png" class="img-thumbnail">
-                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Close</button>
@@ -687,12 +624,11 @@
             <div class="modal-body">
                 <h3>Project Description</h3>
                 <div class="row">
-                    <div class="col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque sed, quidem quis praesentium, ut unde. Quae sed, incidunt laudantium nesciunt, optio corporis quod earum pariatur omnis illo saepe numquam suscipit, nemo placeat dignissimos eius mollitia et quas officia doloremque ipsum labore rem deserunt vero! Magnam totam delectus accusantium voluptas et, tempora quos atque, fugiat, obcaecati voluptatibus commodi illo voluptates dolore nemo quo soluta quis.</p>
-                        <p>Molestiae sed enim laboriosam atque delectus voluptates rerum nostrum sapiente obcaecati molestias quasi optio exercitationem, voluptate quis consequatur libero incidunt, in, quod. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nobis officiis, autem earum tenetur quidem. Quae non dicta earum. Ipsum autem eaque cum dolor placeat corporis quisquam dolorum at nesciunt.</p>
+                    <div class="col-md-12">
+                        <img src="images/englishRule01.png" alt="">
                     </div>
-                    <div class="col-md-6">
-                        <img src="images/portfolio-1.jpg" alt="">
+                    <div class="col-md-12">
+                        <img src="images/englishRule02.png" alt="">
                     </div>
                 </div>
             </div>
@@ -731,7 +667,9 @@
 
 <!-- Modal end -->
 <!-- JavaScript files placed at the end of the document so the pages load faster
+
 ================================================== -->
+
 <!-- Jquery and Bootstap core js files -->
 <script type="text/javascript" src="plugins/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
