--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -178,14 +178,14 @@
 								<div class="col-md-12">
 									<img src="images/002.png" alt="" usemap="#book">
 									<map name="book">
-										<area shape="rect" coords="70,30,150,70" alt="架构能力" href="http://localhost:63342/cc/service4.html">
-										<area shape="rect" coords="50,90,100,150" alt="管理能力" href="http://localhost:63342/cc/service6.html">
-										<area shape="rect" coords="0,180,80,220" alt="国际化能力" href="http://localhost:63342/cc/service8.html">
-										<area shape="rect" coords="50,250,120,310" alt="售前能力" href="http://localhost:63342/cc/service7.html">
-										<area shape="rect" coords="550,70,630,120" alt="技术能力" href="http://localhost:63342/cc/service1.html">
-										<area shape="rect" coords="580,150,650,200" alt="业务能力" href="http://localhost:63342/cc/service2.html">
-										<area shape="rect" coords="570,230,650,250" alt="创新能力" href="http://localhost:63342/cc/service5.html">
-										<area shape="rect" coords="520,320,600,360" alt="敏捷能力" href="http://localhost:63342/cc/service3.html">
+										<area shape="rect" coords="70,30,150,70" alt="架构能力" href="service4.html">
+										<area shape="rect" coords="50,90,100,150" alt="管理能力" href="service6.html">
+										<area shape="rect" coords="0,180,80,220" alt="国际化能力" href="service8.html">
+										<area shape="rect" coords="50,250,120,310" alt="售前能力" href="service7.html">
+										<area shape="rect" coords="550,70,630,120" alt="技术能力" href="service1.html">
+										<area shape="rect" coords="580,150,650,200" alt="业务能力" href="service2.html">
+										<area shape="rect" coords="570,230,650,250" alt="创新能力" href="service5.html">
+										<area shape="rect" coords="520,320,600,360" alt="敏捷能力" href="service3.html">
 									</map>
 
 									<div class="space"></div>
