--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -5,8 +5,8 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>能力中心-服务中心</title>
-		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
+		<title>能力中心-知识库</title>
+		<meta name="description" content="HSBC业务线能力中心知识库">
 		<meta name="author" content="htmlcoder.me">
 
 		<!-- Mobile Meta -->
@@ -29,6 +29,7 @@
 
 		<!-- Worthy core CSS file -->
 		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style1.css" rel="stylesheet">
 
 		<!-- Custom css --> 
 		<link href="css/custom.css" rel="stylesheet">
@@ -94,6 +95,7 @@
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">主页</a></li>
+												<li><a href="#">|</a></li>
 												<li class="active"><a href="#a1">业务渠道</a></li>
 												<li><a href="#a2">技术架构渠道</a></li>
 												<li><a href="#a3">技术渠道</a></li>
@@ -139,14 +141,12 @@
 				<div class="separator"></div>
 
 				<div class="row">
-					<!-- <div class="col-md-6">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi adipisci illo, voluptatum ipsam fuga error commodi architecto, laudantium culpa tenetur at id, beatae placeat deserunt iure quas voluptas fugit eveniet.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ducimus explicabo quibusdam temporibus deserunt doloremque pariatur ea, animi a. Delectus similique atque eligendi, enim vel reiciendis deleniti neque aliquid, sit?</p>
-                        <p>Vitae dolores quam magnam accusantium nam, voluptatibus expedita delectus, dolorum odio magni ut nemo nihil ex earum pariatur molestias velit eveniet, facere autem saepe aut. Ut minima itaque porro facere. Cumque vitae autem, dignissimos molestiae necessitatibus culpa aliquam deleniti soluta sunt voluptatibus tenetur, unde dolorem eligendi doloribus quibusdam facere totam. Possimus atque deserunt numquam aliquam magnam, facilis officiis illo alias ipsa voluptas laborum, praesentium eveniet nobis velit voluptatem odio eligendi, corporis et iste distinctio! Repellendus, id, ad.</p>
-                    </div> -->
+
 					<div class="col-md-12">
 						<div class="panel-group" id="trainingAccordion" role="tablist" aria-multiselectable="true">
 							<div id="a1" class="panel panel-default">
+
+
 								<div class="panel-heading" role="tab" id="trainingHeading1">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse1" aria-expanded="true" aria-controls="trainingCollapse1">
@@ -154,126 +154,121 @@
 										</a>
 									</h4>
 								</div>
-								<div id="trainingCollapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="trainingHeading1">
+							<div id="trainingCollapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="trainingHeading1">
 									<div class="panel-body">
 										<div class="col-md-3">
-											<div class="panel panel-default">
-											<div class="panel-heading">
-												<h1 class="panel-title">
-													RBWM
-												</h1>
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>RBWM</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>账户</span></a></td>
+													<td><a href="#"><span>转账</span></a></td>
+													<td><a href="#"><span>支付</span></a></td>
+													<td><a href="#"><span>存款</span></a></td>
+												</tr>
+												<tr>
+													<td><a href="#"><span>贷款</span></a></td>
+													<td><a href="#"><span>外汇</span></a></td>
+													<td><a href="#"><span>保险</span></a></td>
+													<td><a href="#"><span>房贷</span></a></td>
+												</tr>
+												<tr>
+													<td><a href="#"><span>基金</span></a></td>
+													<td><a href="#"><span>股票</span></a></td>
+													<td><a href="#"><span>理财</span></a></td>
+													<td><a href="#"><span>信用卡</span></a></td>
+												</tr>
+												</tbody>
+											</table></p>
 											</div>
-											<div class="panel-body">
-												<table class="table table-condensed">
-													<tbody>
-													<tr>
-														<td><a href="#"><span class="label label-success">账户</span></a></td>
-														<td><a href="#"><span class="label label-success">转账</span></a></td>
-														<td><a href="#"><span class="label label-success">支付</span></a></td>
-														<td><a href="#"><span class="label label-success">存款</span></a></td>
-													</tr>
-													<tr>
-														<td><a href="#"><span class="label label-success">贷款</span></a></td>
-														<td><a href="#"><span class="label label-success">外汇</span></a></td>
-														<td><a href="#"><span class="label label-success">保险</span></a></td>
-														<td><a href="#"><span class="label label-success">房贷</span></a></td>
-													</tr>
-													<tr>
-														<td><a href="#"><span class="label label-success">基金</span></a></td>
-														<td><a href="#"><span class="label label-success">股票</span></a></td>
-														<td><a href="#"><span class="label label-success">理财</span></a></td>
-														<td><a href="#"><span class="label label-success">信用卡</span></a></td>
-													</tr>
-													</tbody>
-												</table>
 
+										</div>
+										<div class="col-md-3">
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>CMB</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>账户</span></a></td>
+													<td><a href="#"><span>现金管理</span></a></td>
+													<td><a href="#"><span>交易</span></a></td>
+
+												</tr>
+												<tr>
+													<td><a href="#"><span>信贷</span></a></td>
+													<td><a href="#"><span>外汇</span></a></td>
+													<td><a href="#"><span>授权</span></a></td>
+
+												</tr>
+												<tr>
+													<td><a href="#"><span>审计</span></a></td>
+													<td><a href="#"><span>监控</span></a></td>
+													<td><a href="#"><span></span></a></td>
+												</tr>
+
+												</tbody>
+											</table></p>
 											</div>
-										</div></div>
+
+										</div>
 										<div class="col-md-3">
-											<div class="panel panel-default">
-												<div class="panel-heading">
-													<h1 class="panel-title">
-														CMB
-													</h1>
-												</div>
-												<div class="panel-body">
-													<table class="table table-condensed">
-														<tbody>
-														<tr>
-															<td><a href="#"><span class="label label-success">账户</span></a></td>
-															<td><a href="#"><span class="label label-success">现金管理</span></a></td>
-															<td><a href="#"><span class="label label-success">交易</span></a></td>
-															<td><a href="#"><span class="label label-success">信贷</span></a></td>
-														</tr>
-														<tr>
-															<td><a href="#"><span class="label label-success">外汇</span></a></td>
-															<td><a href="#"><span class="label label-success">授权</span></a></td>
-															<td><a href="#"><span class="label label-success">审计</span></a></td>
-															<td><a href="#"><span class="label label-success">监控</span></a></td>
-														</tr>
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>GPM</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>eFOS</span></a></td>
+													<td><a href="#"><span>eTOM</span></a></td>
+													<td><a href="#"><span>eCRM</span></a></td>
 
-														</tbody>
-													</table>
+												</tr>
+												<tr>
+													<td><a href="#"><span>eCRD</span></a></td>
+													<td><a href="#"><span>ePSV</span></a></td>
+													<td><a href="#"><span>ePV</span></a></td>
 
-												</div>
-											</div></div>
 
+												</tr>
+
+												</tbody>
+											</table></p>
+											</div>
+
+										</div>
 										<div class="col-md-3">
-											<div class="panel panel-default">
-												<div class="panel-heading">
-													<h1 class="panel-title">
-														GPM
-													</h1>
-												</div>
-												<div class="panel-body">
-													<table class="table table-condensed">
-														<tbody>
-														<tr>
-															<td><a href="#"><span class="label label-success">eFOS</span></a></td>
-															<td><a href="#"><span class="label label-success">eTOM</span></a></td>
-															<td><a href="#"><span class="label label-success">eCRM</span></a></td>
-															<td><a href="#"><span class="label label-success">eCRD</span></a></td>
-														</tr>
-														<tr>
-															<td><a href="#"><span class="label label-success">ePSV</span></a></td>
-															<td><a href="#"><span class="label label-success">ePV</span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-														</tr>
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>GBM</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>证券基金投资</span></a></td>
+												</tr>
+												<tr>
+													<td><a href="#"><span>外汇投资</span></a></td>
+												</tr>
 
-														</tbody>
-													</table>
+												</tbody>
+											</table></p>
+											</div>
 
-												</div>
-											</div></div>
-
-
-										<div class="col-md-3">
-											<div class="panel panel-default">
-												<div class="panel-heading">
-													<h1 class="panel-title">
-														GBM
-													</h1>
-												</div>
-												<div class="panel-body">
-													<table class="table table-condensed">
-														<tbody>
-														<tr>
-															<td><a href="#"><span class="label label-success">证券基金投资</span></a></td>
-															<td><a href="#"><span class="label label-success">外汇投资</span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-														</tr>
-
-														</tbody>
-													</table>
-
-												</div>
-											</div></div>
 										</div>
 									</div>
 								</div>
-							<div id="a2"class="panel panel-default">
+							</div>
+								<div id="a2"class="panel panel-default">
 								<div class="panel-heading" role="tab" id="trainingHeading2">
 									<h4 class="panel-title">
 										<a data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse2" aria-expanded="true" aria-controls="trainingCollapse2">
@@ -284,113 +279,99 @@
 								<div id="trainingCollapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="trainingHeading2">
 									<div class="panel-body">
 										<div class="col-md-3">
-											<div class="panel panel-default">
-												<div class="panel-heading">
-													<h1 class="panel-title">
-														渠道
-													</h1>
-												</div>
-												<div class="panel-body">
-													<table class="table table-condensed">
-														<tbody>
-														<tr>
-															<td><a href="#"><span class="label label-success">网银</span></a></td>
-															<td><a href="#"><span class="label label-success">Tablet</span></a></td>
-															<td><a href="#"><span class="label label-success">微信银行</span></a></td>
-															<td><a href="#"><span class="label label-success">ATM</span></a></td>
-														</tr>
-														<tr>
-															<td><a href="#"><span class="label label-success">VTM</span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-														</tr>
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>渠道</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>网银</span></a></td>
+													<td><a href="#"><span>Tablet</span></a></td>
+													<td><a href="#"><span>微信银行</span></a></td>
 
-														</tbody>
-													</table>
+												</tr>
+												<tr>
+													<td><a href="#"><span>ATM</span></a></td>
+													<td><a href="#"><span>VTM</span></a></td>
+													<td><a href="#"><span></span></a></td>
 
-												</div>
-											</div></div>
+												</tr>
+
+												</tbody>
+											</table></p>
+											</div>
+
+										</div>
 										<div class="col-md-3">
-											<div class="panel panel-default">
-												<div class="panel-heading">
-													<h1 class="panel-title">
-														应用集成
-													</h1>
-												</div>
-												<div class="panel-body">
-													<table class="table table-condensed">
-														<tbody>
-														<tr>
-															<td><a href="#"><span class="label label-success">GDI</span></a></td>
-															<td><a href="#"><span class="label label-success">SMP</span></a></td>
-															<td><a href="#"><span class="label label-success">BPM</span></a></td>
-															<td><a href="#"><span class="label label-success">EAI</span></a></td>
-														</tr>
-														<tr>
-															<td><a href="#"><span class="label label-success">RMP</span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-														</tr>
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>应用集成</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>GDI</span></a></td>
+													<td><a href="#"><span>SMP</span></a></td>
+													<td><a href="#"><span>BPM</span></a></td>
 
-														</tbody>
-													</table>
+												</tr>
+												<tr>
+													<td><a href="#"><span>EAI</span></a></td>
+													<td><a href="#"><span>RMP</span></a></td>
+													<td><a href="#"><span></span></a></td>
 
-												</div>
-											</div></div>
-
+												</tr>
+												</tbody>
+											</table></p>
+											</div>
+										</div>
 										<div class="col-md-3">
-											<div class="panel panel-default">
-												<div class="panel-heading">
-													<h1 class="panel-title">
-														服务集成
-													</h1>
-												</div>
-												<div class="panel-body">
-													<table class="table table-condensed">
-														<tbody>
-														<tr>
-															<td><a href="#"><span class="label label-success">HCC</span></a></td>
-															<td><a href="#"><span class="label label-success">INS</span></a></td>
-															<td><a href="#"><span class="label label-success">HUB</span></a></td>
-															<td><a href="#"><span class="label label-success">OBS</span></a></td>
-														</tr>
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>服务集成</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>HCC</span></a></td>
+													<td><a href="#"><span>INS</span></a></td>
+													<td><a href="#"><span>HUB</span></a></td>
+													<td><a href="#"><span>OBS</span></a></td>
+												</tr>
+												</tbody>
+											</table></p>
+											</div>
 
-
-														</tbody>
-													</table>
-
-												</div>
-											</div></div>
+										</div>
 
 
 										<div class="col-md-3">
-											<div class="panel panel-default">
-												<div class="panel-heading">
-													<h1 class="panel-title">
-														数据集成
-													</h1>
-												</div>
-												<div class="panel-body">
-													<table class="table table-condensed">
-														<tbody>
-														<tr>
-															<td><a href="#"><span class="label label-success">个人客户数据仓库</span></a></td>
-															<td><a href="#"><span class="label label-success">公司客户数据仓库</span></a></td>
+											<div class="feature-center animate-box" data-animate-effect="fadeInUp">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+												<h3>数据集成</h3>
+												<p><table class="table table-condensed">
+												<tbody>
+												<tr>
+													<td><a href="#"><span>个人客户数据仓库</span></a></td>
+												</tr>
+												<tr>
+													<td><a href="#"><span>公司客户数据仓库</span></a></td>
+												</tr>
+												<tr>
+													<td><a href="#"><span>信用卡数据仓库</span></a></td>
+												</tr>
 
-															<td><a href="#"><span class="label label-success"></span></a></td>
-														</tr>
-														<tr>
-															<td><a href="#"><span class="label label-success">信用卡数据仓库</span></a></td>
-															<td><a href="#"><span class="label label-success"></span></a></td>
-														</tr>
-
-														</tbody>
-													</table>
-
-												</div>
-											</div></div>
+												</tbody>
+											</table></p>
+											</div>
+											<!---->
+										</div>
 									</div>
 								</div>
 							</div>
@@ -472,7 +453,7 @@
 							</div>
 						</div>
 
-						</div>
+
 				</div>
 					</div>
 			    </div>
