--- a/src/main/webapp/service4.html
+++ b/src/main/webapp/service4.html
@@ -152,7 +152,7 @@
 					</div>
 					<div class="col-md-6">
 						<h3>通过专家体系的逐步建立</h3>
-						<li>我们了沉淀系统架构能力</li>
+						<li>我们沉淀了系统架构能力</li>
 						<li>我们建立了架构师团体，并有了架构师积分体系</li>
 						<li>我们举办了分享平台-聚慧大讲堂</li>
 						<li>我们有了架构评审机制</li>
@@ -174,7 +174,7 @@
 								<div class="col-md-8 col-md-offset-2 text-left animate-box" data-animate-effect="fadeInUp">
 									<div class="fh5co-heading">
 										<span>We're expert</span>
-										<h2>典型服务</h2>
+										<h2>典型服务场景</h2>
 										<p>能力中心会陆续推出针对架构能力建设的一系列服务内容，敬请期待！</p>
 									</div>
 								</div>
@@ -196,7 +196,7 @@
 							<i class="icon-command"></i>
 						</span>
 										<h3>VTM架构评审</h3>
-										<p> 组织架构师团队，对VTM系统架构进行了一次评审，是我们架构师团队的第一次亮相。</p>
+										<p> VTM产品化是公司战略的重要体现，在产品化的过程中，项目组付出了巨大的努力。为了对现有的系统架构有一个更明确的认识，能力中心组织架构师团队，对VTM系统架构进行了一次评审，此次评审，是我们架构师团队的第一次亮相。</p>
 										<p><a href="#" data-toggle="modal" data-target="#myModal1">更多</a></p>
 									</div>
 								</div>
@@ -206,7 +206,9 @@
 							<i class="icon-command"></i>
 						</span>
 										<h3>MuleSoft开发平台能力建设</h3>
-										<p>MuleSoft：连接一切!</p>
+										<p>MuleSoft是一家提供基于云的应用集成服务商，成立于2006年，总部位于旧金山。公司的主打产品是 Anypoint 平台，可实现SaaS、SOA及API等的集成，也能实现本地系统与云，以及云与云服务的集成。该平台可以对企业的集成策略进行集中的设计和管理，并作为hub中心与各类端结点系统对接，将二维的点对点连接降低到一个维度，从而简化了集成的复杂性。</p>
+                                        <p>随着各项目组对MuleSoft开发平台的需求日益增长，能力中心联系了MuleSoft公司对能力中心选拔出来的种子人选进行了系列课程的培训。</p>
+
 										<p><a href="#" data-toggle="modal" data-target="#myModal2">更多</a></p>
 									</div>
 								</div>
